@@ -866,6 +866,9 @@ Release 0.19.2 - Unreleased
     HADOOP-4719. Fix documentation of 'ls' format for FsShell. (Ravi Phulari
     via cdouglas)
 
+    HADOOP-5374. Fixes a NPE problem in getTasksToSave method.
+    (Amareshwari Sriramadasu via ddas)
+
 Release 0.19.1 - 2009-02-23 
 
   IMPROVEMENTS
